; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_lubbock.c_lubbock_mci_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_lubbock.c_lubbock_mci_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.device = type { i32 }

@mmc_detect_int = common dso_local global i32 0, align 4
@mmc_timer = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@LUBBOCK_SD_IRQ = common dso_local global i32 0, align 4
@lubbock_detect_int = common dso_local global i32 0, align 4
@IRQF_SAMPLE_RANDOM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"lubbock-sd-detect\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32, i8*)* @lubbock_mci_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lubbock_mci_init(%struct.device* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load i32, i32* %5, align 4
  store i32 %7, i32* @mmc_detect_int, align 4
  %8 = call i32 @init_timer(%struct.TYPE_3__* @mmc_timer)
  %9 = load i8*, i8** %6, align 8
  %10 = ptrtoint i8* %9 to i64
  store i64 %10, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @mmc_timer, i32 0, i32 0), align 8
  %11 = load i32, i32* @LUBBOCK_SD_IRQ, align 4
  %12 = load i32, i32* @lubbock_detect_int, align 4
  %13 = load i32, i32* @IRQF_SAMPLE_RANDOM, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @request_irq(i32 %11, i32 %12, i32 %13, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %14)
  ret i32 %15
}

declare dso_local i32 @init_timer(%struct.TYPE_3__*) #1

declare dso_local i32 @request_irq(i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
